feat: updating folder structure to a better pattern